[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/Background.svg" type="Texture" id=2]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="TopContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="BVolver" type="Button" parent="VBoxContainer/TopContainer"]
margin_right = 41.0
margin_bottom = 31.0
text = "Salir"

[node name="Puntaje" type="Label" parent="VBoxContainer/TopContainer"]
margin_left = 45.0
margin_top = 5.0
margin_right = 320.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Puntaje: 000"
align = 2

[node name="NumPregunta" type="Label" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 320.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Pregunta 0 de 0"
align = 1
valign = 1

[node name="Pregunta" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 320.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Â¿Pregunta?"
align = 1
valign = 1
autowrap = true

[node name="Opciones" type="GridContainer" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 320.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.75
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="Op1" type="Button" parent="VBoxContainer/Opciones"]
margin_right = 320.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true

[node name="Op2" type="Button" parent="VBoxContainer/Opciones"]
margin_top = 91.0
margin_right = 320.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true

[node name="Op3" type="Button" parent="VBoxContainer/Opciones"]
margin_top = 182.0
margin_right = 320.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true

[node name="Op4" type="Button" parent="VBoxContainer/Opciones"]
margin_top = 272.0
margin_right = 320.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true

[node name="Sleeper" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="VBoxContainer/TopContainer/BVolver" to="." method="_on_BVolver_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones/Op1" to="." method="_on_Option_pressed" binds= [ 0 ]]
[connection signal="pressed" from="VBoxContainer/Opciones/Op2" to="." method="_on_Option_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/Opciones/Op3" to="." method="_on_Option_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/Opciones/Op4" to="." method="_on_Option_pressed" binds= [ 3 ]]
[connection signal="timeout" from="Sleeper" to="." method="_on_Sleeper_timeout"]
